# entersys-backend

./: .env.dev.example  .env.example  .gitignore  API-DOCUMENTATION.md  ARCHITECTURE.md  AUTO-FIX-404.sh  COMPLETE-SETUP.sh  CWeb_Entersysentersys-backendprometheus-config-backup.yml  DEBUG-DATABASE.sh  DEBUG-HEALTH.sh  DEPLOY-NOW.sh  DEPLOY-SMARTSHEET.sh  DEPLOYMENT-GUIDE.md  DOCUMENTACION-MONITOREO-SIX-SIGMA.md  Dockerfile  Dockerfile.dev  FIX-404-DEPLOY.sh  FIX-DATABASE-AUTH.sh  FIXED-COMPLETE-SETUP.sh  FORCE-ENV-RELOAD.sh  FORCE-REBUILD.sh  GUARANTEED-WORKING.sh  INSTRUCCIONES-DASHBOARD.md  LOG_SHIPPING_GUIDE.md  MANUAL-DB-FIX.sh  ONE-COMMAND-DEPLOY.sh  Prompt_inicial.md  QUICK-DEPLOY.md  QUICK-TEST.sh  README.md  Roadmap de Desarrollo y CI-CD para la API.md  SETUP-POSTGRES.sh  SIMPLE-FIX.sh  SIX-SIGMA-DASHBOARDS-SUMMARY.md  ULTIMATE-WORKING-SETUP.sh  UPDATE-ENV.sh  add-monitoring.sh  alembic.ini  auto_deploy.ps1  check-six-sigma-compliance.sh  (+50 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  (+3 more)
alembic/: env.py
app/: main.py
dashboards/: README.md  six-sigma-analytics-main.json  six-sigma-error-analysis.json  six-sigma-executive.json  six-sigma-performance-sla.json  six-sigma-prometheus-main.json
decorators/: six_sigma_logging.py
middleware/: request_logging.py
temp_files/: Keyssh  docker-compose-path-routing.yml  docker-compose-working-fixed.yml  docker-compose-working.yml  docker-compose.yml.backup  setup_ssh_access.bat  six-sigma-dashboard.json  temp_prometheus_fix.py
templates/: docker-compose.service-template.yml
tests/: test_main.py
(+63 files in other folders)
